delete holiday by id
