# backend/swagger-output.json
@@ -151,7 +151,7 @@
       }
     },
     "/api/v1/holiday/all-holidays": {
-      "post": {
+      "get": {
         "description": "Retrieve all holiday requests (Admin only)",
         "security": [
           { "jwtAuth": [] }
@@ -179,7 +179,7 @@
       }
     },
     "/api/v1/holiday/holiday-responce/{id}": {
-      "post": {
+      "put": {
         "description": "Update holiday request status",
         "security": [
           { "jwtAuth": [] }
@@ -237,6 +237,21 @@
             }
           },
           "401": { "description": "Unauthorized" }
+        }
+      }
+    },
+    "/api/v1/holiday/holiday-user/delete/{id}": {
+      "delete": {
+        "description": "",
+        "security": [
+          { "jwtAuth": [] }
+        ],
+        "parameters": [
+          { "name": "id", "in": "path", "required": true, "type": "string" }
+        ],
+        "responses": {
+          "200": { "description": "OK" },
+          "403": { "description": "Forbidden" }
         }
       }
     }
